# personal_wiki

./: .gitignore
00_notes/: notes_django.md  notes_english.md
02_helloworld/: db.sqlite3
02_helloworld/helloworld_project/: settings.py
02_helloworld/pages/: urls.py
03_pages/pages_project/: settings.py
data-engineering-learn/: IBM_data_engineering.md  README.md
data-engineering-learn/IBM Data Engineering/: notes_IBM_data_engineering.md
data-engineering-learn/Python/: python-exercises.ipynb
data-engineering-learn/python/: 01_REVISION_python_basics.ipynb  03_python_exceptions_handling.ipynb  04_python_objects_classes.ipynb  06_REVISION_python_pandas_numpy.ipynb  07_Introduction_API.ipynb  08_API.ipynb  09_Web-Scraping-Review-Lab.ipynb  (+1 more)
django-learn/: README.md  django.md  notes_django.md
english-learn/: README.md  notes_create_sentences_anki.md  notes_english.md
fastAPI-learn/: 01_main.py  02_main_pydantic.py  03_main_nested_models.py  04_main_response_model.py  05_main_extra_models.py  06_main_forms.py  07_main_files.py  08_main_errors.py  09_main_path_config.py  main.py
just-python-learn/: README.md
notes/: notes_django.md  notes_english.md
system_learn/backend/: Dockerfile  UnderstadingOpenIDConnect.md  alchemy.py  alembic.ini  auth-fastapi.py  aws.md  aws.py  book.ipynb  db.sqlite3  docker-compose.yaml  main.py  models.py  output.txt  pyproject.toml  requirements.txt  uv.txt
system_learn/backend/JWT/: README.md
system_learn/backend/OAuth2.0/: README.md
system_learn/backend/db/migrations/versions/: 268a2816020d_initial.py
(+514 files in other folders)
