[project]
name = "our-wedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.14",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]
